# Persistencis-2entrega

./: .env  .env-Model  README.md  database.py  hello.py  main.py  pyproject.toml
models/: Perfil.py  Perfis.py  album.py  pubAlbum.py  publicacao.py  publicacoes.py
routers/: publicacoes.py
